Add LLNL presentation number.

--- a/beamer-talk-template.tex
+++ b/beamer-talk-template.tex
@@ -42,7 +42,7 @@ are solely those of its author and do not reflect the views of Lawrence
 Livermore National Laboratory.}}
 
 % For LLNL presentation number
-\institute[LLNL-PRES-XXXXX-DRAFT]
+\institute[LLNL-PRES-621574-DRAFT]
 %% End overriding Pandoc metadata for title slide, headers, footers
 
 %% Begin body and Pandoc macro section
